--- a/style.css
+++ b/style.css
@@ -124,4 +124,23 @@ body {
   
 } */
 
+.modal-delete{
+  display: none;
+  position:fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  width: 600px;
+  background: rgba(0, 0, 0, 0.6);
+  overflow:auto
+}
+
+.modal-content{
+  background-color: #fff;
+  padding: 20px;
+  width: 60%;
+  z-index: 99999;
+}
 
