--- a/style.css
+++ b/style.css
@@ -127,20 +127,25 @@ body {
 .modal-delete{
   display: none;
   position:fixed;
-  z-index: 1000;
+  z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  width: 600px;
-  background: rgba(0, 0, 0, 0.6);
-  overflow:auto
+  width: 100%;
+  overflow:auto;
+  
+  
+
 }
 
 .modal-content{
-  background-color: #fff;
+  background-color: rgb(224, 210, 210);
   padding: 20px;
-  width: 60%;
-  z-index: 99999;
+  width: 30%;
+  z-index: 9;
+  margin: 300px auto;
+  
+  
 }
 
