--- a/style.css
+++ b/style.css
@@ -167,3 +167,24 @@ body {
 .error-text-login-password{
   color: red
 }
+
+.modal-edite{
+  display: none;
+  position:fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  width: 100%;
+  overflow:auto;
+
+}
+.modal-content-edit{
+  background-color: rgb(224, 210, 210);
+  padding: 20px;
+  width: 65%;
+  z-index: 9;
+  margin: 500px auto;
+
+}
