--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body {
   background-color: rgb(224, 210, 210);
   padding: 20px;
   width: 65%;
+  height: 60vh;
   z-index: 9;
-  margin: 500px auto;
-
+  margin: 10px auto;
 }
