--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
 }
+
 .conteiner {
   display: flex;
   min-height: calc(100vh - 20vh);
 }
-.content {
-  flex: 1;
-}
+
 .navigation {
   flex: 0 0 20vw;
   background: beige;
 }
+
 .sidebar {
   flex: 0 0 20vw;
   background: rgb(241, 241, 238);
@@ -24,22 +25,19 @@ body {
   background: rgb(117, 50, 205);
   height: 10vh;
 }
+
 .footer {
   background: yellowgreen;
   height: 10vh;
 }
+
 .content {
+  flex: 1;
   background-color: blanchedalmond;
   height: 80vh;
   display: block;
 }
 
-.login-form {
-  width: 300px;
-  background-color: rgb(231, 236, 236);
-  padding: 20px;
-  margin: 100px auto;
-}
 .form-title {
   text-align: center;
   text-transform: uppercase;
@@ -62,6 +60,15 @@ body {
 .form-input:invalid {
   border: 3px solid red;
 }
+
+.registration-form,
+.login-form {
+  width: 300px;
+  background-color: rgb(231, 236, 236);
+  padding: 20px;
+  margin: 100px auto;
+}
+
 .submit-button {
   width: 100%;
   height: 32px;
@@ -75,42 +82,18 @@ body {
   color: red;
 }
 
-.list-of-usrs {
-  text-align: center;
+.list-of-users {
   display: none;
-  padding-top: 200px;
-}
-.list-group {
-  display: block;
-}
-
-.list-users {
   text-align: center;
   padding-top: 200px;
 }
-.submit-button-login {
-  width: 100%;
-  height: 32px;
-  border-radius: 4px;
-  margin-top: 16px;
-  background-color: coral;
-  color: white;
-}
-/* 
-.list-group{
-  display: none;
-  
-  
-   
-}
-.list-item{
-  width: 100px;
-  
- 
-  
-} */
 
-.modal-delete {
+.login {
+  display: none;
+}
+
+.modal-delete,
+.modal-edit {
   display: none;
   position: fixed;
   z-index: 1;
@@ -123,29 +106,10 @@ body {
 }
 
 .modal-content {
-  background-color: rgb(224, 210, 210);
+  background-color: rgba(224, 210, 210, .95);
   padding: 20px;
-  width: 15%;
+  width: 45%;
   z-index: 9;
   margin: 300px auto;
 }
 
-.login-form-login {
-  width: 300px;
-  background-color: rgb(231, 236, 236);
-  padding: 20px;
-  margin: 100px auto;
-}
-.form-input-login-email,
-.form-input-login-password {
-  width: 100%;
-  height: 32px;
-  outline: none;
-}
-.error-text-login_email {
-  color: red;
-}
-
-.error-text-login-password {
-  color: red;
-}
