--- a/style.css
+++ b/style.css
@@ -61,6 +61,11 @@ body {
   border: 3px solid red;
 }
 
+.form-control-edit {
+  margin: 10px;
+  display: flex;
+}
+
 .registration-form,
 .login-form {
   width: 300px;
@@ -83,9 +88,29 @@ body {
 }
 
 .list-of-users {
-  display: none;
+  
   text-align: center;
   padding-top: 200px;
+}
+
+.list-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.m-3 {
+  
+  margin: 10px;
+}
+.m-4 {
+  display: flex;
+  direction: column;
+  
+  justify-content:center;
+
+  
 }
 
 .login {
@@ -93,7 +118,10 @@ body {
 }
 
 .modal-delete,
-.modal-edit {
+.modal-edit,
+.modal-login,
+.modal-registration {
+  background-color: rgba(0, 0, 0, .4);
   display: none;
   position: fixed;
   z-index: 1;
@@ -106,7 +134,7 @@ body {
 }
 
 .modal-content {
-  background-color: rgba(224, 210, 210, .95);
+  background-color: rgba(224, 210, 210);
   padding: 20px;
   width: 45%;
   z-index: 9;
