--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 }
 
 .form-control-edit {
-  margin: 10px;
+  margin: 5px;
   display: flex;
 }
 
@@ -72,6 +72,7 @@ body {
   background-color: rgb(231, 236, 236);
   padding: 20px;
   margin: 100px auto;
+  margin-top: 200px;
 }
 
 .submit-button {
@@ -91,25 +92,20 @@ body {
   
   text-align: center;
   padding-top: 200px;
+  margin-top: 10px;
 }
 
 .list-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  
+  justify-content: center;  
 }
 
-.m-3 {
-  
-  margin: 10px;
-}
-.m-4 {
+.m-2{
   display: flex;
-  direction: column;
-  
-  justify-content:center;
-
+    align-items: center;
+  justify-content: center;
   
 }
 
@@ -131,12 +127,36 @@ body {
   height: 100%;
   width: 100%;
   overflow: auto;
+  
 }
+
 
 .modal-content {
   background-color: rgba(224, 210, 210);
   padding: 20px;
-  width: 45%;
+  width: 25%;
   z-index: 9;
   margin: 300px auto;
+}
+
+.button-delete,
+.button-edit {
+  margin-left: 10px;
+  width: 100%;
+  height: 22px;
+  border-radius: 4px;
+  margin-top: 16px;
+  background-color: coral;
+  color: white;
+
+}
+.edit-confirmation-btn,
+.delete-confirmation-btn {
+  margin-left: 10px;
+  width: 50%;
+  height: 32px;
+  border-radius: 4px;
+  margin-top: 16px;
+  background-color: coral;
+  color: white;
 }
