--- a/style.css
+++ b/style.css
@@ -137,7 +137,8 @@ body {
 .modal-inner{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content:space-between;
+ margin-top: -20px;
 }
 
 
