--- a/templates/add-post.html
+++ b/templates/add-post.html
@@ -17,6 +17,7 @@
         <button  class="button-card" type="submit">Send</button>
     </form>
     </div>
-    <div style="display: flex; flex-wrap: wrap;" id="postContainer">
+    <div style="display: flex; flex-wrap: wrap;" id="postContainer"></div>
+
         
-    </div>
+    
